# vox-canvas

./: .gitignore  AGENTS.md  DOCKER.md  GOOGLE_SPEECH_SETUP.md  Makefile  README-Docker.md  README.md  docker-compose.dev.yml  docker-compose.yml  test-transcription.html
backend/: .dockerignore  Dockerfile  README.md  logging.json  pyproject.toml  test_google_speech.py  test_google_stt.py
backend/app/: __init__.py  config.py  main.py
backend/app/services/: __init__.py  cards.py  gemini_composer.py  stt.py
backend/scripts/: dev_smoke.py
backend/tests/: __init__.py  test_api_cards.py  test_card_composer.py  test_stt_stub.py  test_ws_transcription.py
frontend/: .dockerignore  Caddyfile  Dockerfile  README.md  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CardCanvas.tsx  CardCarousel.tsx  CardCreationModal.tsx  CardTemplateLibrary.tsx  CardUpdateManager.tsx  ConnectionBadge.tsx  CounterCard.tsx  CustomCard.tsx  DisplayModeSelector.tsx  DynamicCard.tsx  EmptyState.tsx  KeywordsCard.tsx  ReconnectionBanner.tsx  SentimentCard.tsx  SessionStatus.tsx  StaticCardWrapper.tsx  StickyCard.tsx  SummaryCard.tsx  ToastProvider.tsx  TranscriptList.tsx  index.ts
frontend/src/data/: cardTemplates.ts  demo.ts  demoData.ts
frontend/src/services/: audioRecorder.ts  websocket.ts
frontend/src/state/: sessionStore.ts
frontend/src/types/: session.ts
scripts/: backup.sh  wait-for-it.sh
traefik/: dynamic.yml
